# ExileApiPluginDev

./: .gitignore  ExileApiPluginDevBridge.cs  ExileApiPluginDevBridge.csproj  README.md  pyproject.toml
src/exileapi_plugin_dev/: __init__.py  core.py  server.py  snapshot_archive.py
tests/: test_core.py  test_snapshot_archive.py
